--- a/index.html
+++ b/index.html
@@ -1730,6 +1730,28 @@
                 alert('Redirecting to Seller Dashboard...');
             });
         });
+        // src/firebase.js
+import { initializeApp } from "firebase/app";
+import { getAuth } from "firebase/auth";
+import { getFirestore } from "firebase/firestore";
+
+// Replace with your actual config from Firebase console
+const firebaseConfig = {
+  apiKey: "YOUR_API_KEY",
+  authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+  projectId: "YOUR_PROJECT_ID",
+  storageBucket: "YOUR_PROJECT_ID.appspot.com",
+  messagingSenderId: "YOUR_SENDER_ID",
+  appId: "YOUR_APP_ID"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+
+// Export for use in the app
+export const auth = getAuth(app);
+export const db = getFirestore(app);
+
     </script>
 </body>
 </html>
